fix: search results broken style

--- a/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchResultItem/SearchResultItem.module.scss
+++ b/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchResultItem/SearchResultItem.module.scss
@@ -3,7 +3,7 @@
 }
 
 .root.level1 {
-  opacity: 0.1;
+  display: block;
   padding-left: 32px;
 }
 
